package br.com.psytecnology.domain.entity.dto;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class StatusPedidoDTO {

    private String status;

}
